--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -22,8 +22,29 @@ jobs:
   build:
     uses: urob/zmk-actions/.github/workflows/build-user-config.yml@main
     with:
+      build_matrix_path: build.yaml
+      config_path: config
       toolchain: zephyr-full
-      
+  
+  debug:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          submodules: recursive
+
+      - name: Get branch name
+        id: branch-name
+        run: |
+          BRANCH_NAME=${GITHUB_REF#refs/heads/}
+          echo "branch=$BRANCH_NAME" >> $GITHUB_OUTPUT
+          echo "Branch name is $BRANCH_NAME"
+
+      - name: List files
+        run: |
+          ls -R ./
   # upload-firmware:
   #   needs: build
   #   runs-on: ubuntu-latest
