--- a/keymap-drawer/config.yaml
+++ b/keymap-drawer/config.yaml
@@ -14,4 +14,4 @@ parse_config:
 draw_config:
   dark_mode: auto
   glyph_tap_size: 18
-  footer_text: 'GeasonMKB KEYMAPS | Created with keymap-drawer' 
+  footer_text: 'MKB KEYMAPS | Created with keymap-drawer' 
