--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -22,6 +22,9 @@ CONFIG_ANALOG_INPUT_REPORT_INTERVAL_MIN=22
 CONFIG_ANALOG_INPUT_LOG_DBG_RAW=n
 CONFIG_ANALOG_INPUT_LOG_DBG_REPORT=n
 
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
 CONFIG_RGBLED_WIDGET=y
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
 CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_HIGH=50
