feat: add TLX493D driver and calibration settings; enable OLED display and configure I2C

--- a/config/west.yml
+++ b/config/west.yml
@@ -22,7 +22,9 @@ manifest:
       revision: main
     - name: zmk-analog-input-driver
       remote: badjeff
-      #remote: te9no
+      revision: main
+    - name: zmk-dongle-display
+      remote: te9no
       revision: main
     # - name: zmk-leader-key
     #   remote: urob
