--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -14,6 +14,9 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
+
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 CONFIG_ANALOG_INPUT=y
@@ -32,6 +35,14 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
+
+# Enable TLX493D driver
+CONFIG_INPUT_TLX493D=y
+
+# Calibration settings
+CONFIG_TLX493D_CALIBRATION_SAMPLES=300
+CONFIG_TLX493D_HYSTERESIS_THRESHOLD=100
+CONFIG_TLX493D_CENTER_THRESHOLD=400
 
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
