--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -8,6 +8,7 @@ CONFIG_INPUT=y
 CONFIG_PINCTRL=y
 CONFIG_I2C_NRFX=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
+CONFIG_SENSOR=y
 
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
@@ -37,9 +38,9 @@ CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
 # Enable TLX493D driver
+CONFIG_TLX493D=y
 CONFIG_INPUT_TLX493D=y
-
-# Calibration settings
+CONFIG_ZMK_TLX493D=y
 CONFIG_TLX493D_CALIBRATION_SAMPLES=300
 CONFIG_TLX493D_HYSTERESIS_THRESHOLD=100
 CONFIG_TLX493D_CENTER_THRESHOLD=400
