--- a/boards/shields/MKB/MKB_pinctrl_L.dtsi
+++ b/boards/shields/MKB/MKB_pinctrl_L.dtsi
@@ -13,4 +13,21 @@
             low-power-enable;
         };
     };
+
+    spi0_default: spi0_default {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 4)>,
+                    <NRF_PSEL(SPIM_MOSI, 0, 5)>,
+                    <NRF_PSEL(SPIM_MISO, 0, 5)>;
+        };
+    };
+
+    spi0_sleep: spi0_sleep {
+        group1 {
+            psels = <NRF_PSEL(SPIM_SCK, 0, 4)>,
+                    <NRF_PSEL(SPIM_MOSI, 0, 5)>,
+                    <NRF_PSEL(SPIM_MISO, 0, 5)>;
+            low-power-enable;
+        };
+    };
 };
