--- a/boards/shields/MKB/MKB_L_JS_Enc.dtsi
+++ b/boards/shields/MKB/MKB_L_JS_Enc.dtsi
@@ -7,6 +7,14 @@
 };
 
 / {
+   left_encoder: encoder_left {
+      compatible = "alps,ec11";
+      a-gpios = <&xiao_d 7 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+      b-gpios = <&xiao_d 8 (GPIO_ACTIVE_HIGH | GPIO_PULL_UP)>;
+      steps = <12>;
+      status = "disabled";
+   };
+
     anin0: analog_input_0 {
         compatible = "zmk,analog-input";
         sampling-hz = <100>;
