--- a/boards/shields/MKB/MKB.dtsi
+++ b/boards/shields/MKB/MKB.dtsi
@@ -36,6 +36,10 @@
       };
    };
    
+   left_encoder: encoder_left {
+      status = "disabled";
+   };
+
    right_encoder: encoder_right {
       status = "disabled";
    };
