--- a/boards/shields/MKB/MKB_L_TB.dtsi
+++ b/boards/shields/MKB/MKB_L_TB.dtsi
@@ -6,7 +6,7 @@
 &pinctrl {
     spi0_default: spi0_default {
         group1 {
-            psels = <NRF_PSEL(SPIM_SCK, 0, 5>,
+            psels = <NRF_PSEL(SPIM_SCK, 0, 5)>,
                     <NRF_PSEL(SPIM_MOSI, 0, 4)>,
                     <NRF_PSEL(SPIM_MISO, 0, 4)>;
         };
