--- a/build.yaml
+++ b/build.yaml
@@ -3,8 +3,27 @@ include:
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
+    artifact-name: MKB_L_MODULE_TB
+    kconfig:
+      - MKB_L_MODULE_TB=y
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L rgbled_adapter dongle_display
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    artifact-name: MKB_L_MODULE_JOY
+    kconfig:
+      - MKB_L_MODULE_JOY=y
+
+  - board: seeeduino_xiao_ble
+    shield: MKB_L rgbled_adapter dongle_display
+    snippet: zmk-usb-logging studio-rpc-usb-uart
+    artifact-name: MKB_L_MODULE_ENC
+    kconfig:
+      - MKB_L_MODULE_ENC=y
+
   - board: seeeduino_xiao_ble
     shield: MKB_R rgbled_adapter
     snippet: zmk-usb-logging studio-rpc-usb-uart
+    
   - board: seeeduino_xiao_ble
     shield: settings_reset
