--- a/build.yaml
+++ b/build.yaml
@@ -4,26 +4,23 @@ include:
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_TB
-    kconfig:
-      - MKB_L_MODULE_TB=y
+    cmake-args: - MKB_L_MODULE_TB=y
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_JOY
-    kconfig:
-      - MKB_L_MODULE_JOY=y
+    cmake-args: - MKB_L_MODULE_JOY=y
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_ENC
-    kconfig:
-      - MKB_L_MODULE_ENC=y
+    cmake-args: - MKB_L_MODULE_ENC=y
 
   - board: seeeduino_xiao_ble
     shield: MKB_R rgbled_adapter
     snippet: zmk-usb-logging studio-rpc-usb-uart
-    
+
   - board: seeeduino_xiao_ble
     shield: settings_reset
