--- a/build.yaml
+++ b/build.yaml
@@ -4,19 +4,22 @@ include:
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_TB
-    cmake-args: -DCONFIG_MKB_L_MODULE_TB=y
+    # cmake-args: -DCONFIG_MKB_L_MODULE_TB=y
+    cmake-args:  -DEXTRA_DTC_OVERLAY_FILE="${PWD}/boards/shields/MKB/MKB_L_MODULE_TB.dtsi"
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_JOY
-    cmake-args: -DCONFIG_MKB_L_MODULE_JOY=y
+    # cmake-args: -DCONFIG_MKB_L_MODULE_JOY=y
+    cmake-args: -DEXTRA_DTC_OVERLAY_FILE="${PWD}/boards/shields/MKB/MKB_L_MODULE_JOY.dtsi"
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_ENC
-    cmake-args: -DCONFIG_MKB_L_MODULE_ENC=y
+    # cmake-args: -DCONFIG_MKB_L_MODULE_ENC=y
+    cmake-args: -DEXTRA_DTC_OVERLAY_FILE="${PWD}/boards/shields/MKB/MKB_L_MODULE_ENC.dtsi"
 
   - board: seeeduino_xiao_ble
     shield: MKB_R rgbled_adapter
