--- a/boards/shields/MKB/MKB_L_TB.dtsi
+++ b/boards/shields/MKB/MKB_L_TB.dtsi
@@ -25,6 +25,12 @@
 / {
     trackball_listener2 {
         status = "okay";
+        device = <&trackball2>;
+        scroll {
+            layers = <1>;
+            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>, <&zip_xy_scaler 1 20>, <&zip_xy_to_scroll_mapper>;
+            process-next;
+        };
     };
 };
 
