--- a/build.yaml
+++ b/build.yaml
@@ -5,7 +5,7 @@ include:
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_TB
     cmake-args: "-DCONFIG_MKB_L_MODULE_TB=y"
-    cmake-args:  -DEXTRA_DTC_OVERLAY_FILE="${PWD}/boards/shields/MKB/MKB_L_MODULE_TB.dtsi"
+    # cmake-args:  -DEXTRA_DTC_OVERLAY_FILE="${PWD}/boards/shields/MKB/MKB_L_MODULE_TB.dtsi"
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
