--- a/build.yaml
+++ b/build.yaml
@@ -1,26 +1,23 @@
 ---
 include:
   - board: seeeduino_xiao_ble
-    shield: MKB_L rgbled_adapter dongle_display
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_TB
-    cmake-args: "-DMY_BOARD_VARIANT=trackball -DCONFIG_MKB_L_MODULE_TB=y"
+    shield: MKB_L
+    cmake-args: "-DSHIELD_MKB_L=y -DCONFIG_MKB_L_MODULE_TB=y"
+    artifact-name: left_tb
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L rgbled_adapter dongle_display
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_JOY
-    cmake-args: "-DMY_BOARD_VARIANT=joystick -DCONFIG_MKB_L_MODULE_JOY=y"
+    shield: MKB_L
+    cmake-args: "-DSHIELD_MKB_L=y -DCONFIG_MKB_L_MODULE_JOY=y"
+    artifact-name: left_joy
 
   - board: seeeduino_xiao_ble
-    shield: MKB_L rgbled_adapter dongle_display
-    snippet: zmk-usb-logging studio-rpc-usb-uart
-    artifact-name: MKB_L_MODULE_ENC
-    cmake-args: "-DMY_BOARD_VARIANT=encoder -DCONFIG_MKB_L_MODULE_ENC=y"
+    shield: MKB_L
+    cmake-args: "-DSHIELD_MKB_L=y -DCONFIG_MKB_L_MODULE_ENC=y"
+    artifact-name: left_enc
 
   - board: seeeduino_xiao_ble
-    shield: MKB_R rgbled_adapter
-    snippet: zmk-usb-logging studio-rpc-usb-uart
+    shield: MKB_R
+    artifact-name: right
 
   - board: seeeduino_xiao_ble
     shield: settings_reset
