--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -18,6 +18,13 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
+CONFIG_PMW3610=y
+CONFIG_PMW3610_SWAP_XY=n
+CONFIG_PMW3610_INVERT_X=n
+CONFIG_PMW3610_INVERT_Y=y
+CONFIG_PMW3610_SMART_ALGORITHM=y
+CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
+
 CONFIG_ADC=y
 CONFIG_ADC_ASYNC=y
 CONFIG_ANALOG_INPUT=y
