--- a/boards/shields/MKB/modules/MKB_L_TB.dtsi
+++ b/boards/shields/MKB/modules/MKB_L_TB.dtsi
@@ -24,12 +24,17 @@
 
 / {
     trackball_listener2 {
+        compatible = "zmk,input-listener";
         status = "okay";
         device = <&trackball2>;
+        input-processors = <&zip_temp_layer 3 700>;
+
         scroll {
             layers = <1>;
-            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>, <&zip_xy_scaler 1 20>, <&zip_xy_to_scroll_mapper>;
-            process-next;
+            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, 
+                              <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>, 
+                              <&zip_xy_scaler 1 20>, 
+                              <&zip_xy_to_scroll_mapper>;
         };
     };
 };
@@ -42,15 +47,16 @@
     pinctrl-names = "default", "sleep";
     cs-gpios = <&xiao_d 7 GPIO_ACTIVE_LOW>;
 
-    trackball2: trackball@0 {
+    trackball2: trackball2@0 {
         status = "okay";
         compatible = "pixart,pmw3610";
         reg = <0>;
         spi-max-frequency = <2000000>;
         irq-gpios = <&xiao_d 8 (GPIO_ACTIVE_LOW | GPIO_PULL_UP)>;
-        cpi = <600>;
+        cpi = <800>;
         evt-type = <INPUT_EV_REL>;
         x-input-code = <INPUT_REL_X>;
         y-input-code = <INPUT_REL_Y>;
+        force-awake;
     };
 };
