--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -78,3 +78,18 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # Key debouncing settings (in milliseconds)
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+# Mouse movement configuration
+CONFIG_ZMK_MOUSE=y
+CONFIG_ZMK_MOUSE_TICK_DURATION=8
+CONFIG_ZMK_MOUSE_MAX_SPEED=1500
+
+# Input processing configuration
+CONFIG_ZMK_INPUT_LAYER_GENERIC=y
+CONFIG_ZMK_INPUT_MAPPER_MOUSE=y
+CONFIG_ZMK_INPUT_MAPPER_SCROLL=y
+
+# TLX493D sensor configuration
+CONFIG_INPUT_TLX493D=y
+CONFIG_TLX493D_CALIBRATION_SAMPLES=300
+CONFIG_TLX493D_REPORT_INTERVAL_MIN=8
