Update configuration for MKB keyboard: add mouse support, adjust I2C settings, and modify TLX493D polling interval

--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -4,12 +4,14 @@ CONFIG_ZMK_KEYBOARD_NAME="MKB"
 # Enable USB and Bluetooth connectivity
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
+CONFIG_ZMK_MOUSE=y
 CONFIG_ZMK_POINTING=y
 
 # Basic hardware configurations
 CONFIG_INPUT=y
 CONFIG_PINCTRL=y
 CONFIG_SPI=y
+CONFIG_I2C=y
 CONFIG_I2C_NRFX=y
 CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_SENSOR=y
@@ -57,9 +59,7 @@ CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
 # Enable TLX493D driver
 CONFIG_INPUT_TLX493D=y
-CONFIG_TLX493D_CALIBRATION_SAMPLES=300
-CONFIG_TLX493D_HYSTERESIS_THRESHOLD=100
-CONFIG_TLX493D_CENTER_THRESHOLD=400
+CONFIG_INPUT_TLX493D_POLLING_INTERVAL_MS=20
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
