--- a/config/west.yml
+++ b/config/west.yml
@@ -8,6 +8,8 @@ manifest:
       url-base: https://github.com/badjeff
     - name: te9no
       url-base: https://github.com/te9no
+    - name: kot149
+      url-base: https://github.com/kot149/zmk-pmw3610-driver
   projects:
     - name: zmk
       #remote: zmkfirmware
@@ -18,7 +20,8 @@ manifest:
       remote: caksoylar
       revision: main
     - name: zmk-pmw3610-driver
-      remote: badjeff
+      # remote: badjeff
+      remote: kot149
       revision: main
     - name: zmk-analog-input-driver
       remote: badjeff
