--- a/boards/shields/MKB/modules/MKB_L_Enc.dtsi
+++ b/boards/shields/MKB/modules/MKB_L_Enc.dtsi
@@ -1,4 +1,7 @@
+#include <dt-bindings/zmk/bt.h>
 #include <input/processors.dtsi>
+#include <dt-bindings/zmk/input_transform.h>
+#include <zephyr/dt-bindings/input/input-event-codes.h>
 
 / {
    left_encoder: encoder_left {
