--- a/boards/shields/MKB/modules/MKB_L_Enc.dtsi
+++ b/boards/shields/MKB/modules/MKB_L_Enc.dtsi
@@ -17,10 +17,7 @@
     status = "okay";
 };
 
-/ {
-    trackball_listener2 {
-        compatible = "zmk,input-listener";
-        status = "disabled";
-        };
-    };
+&trackball_listener2 {
+    compatible = "zmk,input-listener";
+    status = "disabled";
 };
