--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -28,7 +28,7 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
 # PMW3610 optical sensor settings
-CONFIG_PMW3610=y
+CONFIG_PMW3610=n
 CONFIG_PMW3610_CPI=700
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_180=y
