--- a/boards/shields/MKB/MKB_L.conf
+++ b/boards/shields/MKB/MKB_L.conf
@@ -28,7 +28,7 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
 # PMW3610 optical sensor settings
-CONFIG_PMW3610=n
+CONFIG_PMW3610=y
 CONFIG_PMW3610_CPI=700
 CONFIG_PMW3610_CPI_DIVIDOR=1
 CONFIG_PMW3610_ORIENTATION_180=y
@@ -47,14 +47,8 @@ CONFIG_PMW3610_REST1_SAMPLE_TIME_MS=20
 #CONFIG_PMW3610_FORCE_AWAKE=n
 CONFIG_PMW3610_POLLING_RATE_125_SW=y
 CONFIG_PMW3610_AUTOMOUSE_TIMEOUT_MS=2147483647
-
 CONFIG_PMW3610_SMART_ALGORITHM=y
-
 CONFIG_PMW3610_MOVEMENT_THRESHOLD=0
-CONFIG_PMW3610_BALL_ACTION_TICK=20
-
-CONFIG_PMW3610_SCROLL_ACCELERATION=y
-CONFIG_PMW3610_SCROLL_ACCELERATION_SENSITIVITY=6
 
 # Analog input settings for sensors
 CONFIG_ADC=y
