--- a/build.yaml
+++ b/build.yaml
@@ -10,13 +10,13 @@ include:
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_JOY
-    cmake-args: "-DDTS_EXTRA_CPPFLAGS='-DMKB_L_MODULE_JOY_ENABLED'"
+    cmake-args: "-DEXTRA_DTC_OVERLAY_FILE='MKB_L_JS_Enc.overlay' -DEXTRA_CONF_FILE='MKB_L_JS_Enc.conf'"
 
   - board: seeeduino_xiao_ble
     shield: MKB_L rgbled_adapter dongle_display
     snippet: zmk-usb-logging studio-rpc-usb-uart
     artifact-name: MKB_L_MODULE_ENC
-    cmake-args: "-DDTS_EXTRA_CPPFLAGS='-DMKB_L_MODULE_ENC_ENABLED'"
+    cmake-args: "-DEXTRA_DTC_OVERLAY_FILE='MKB_L_Enc.overlay' -DEXTRA_CONF_FILE='MKB_L_Enc.conf'"
 
   - board: seeeduino_xiao_ble
     shield: MKB_R rgbled_adapter
