--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -32,7 +32,6 @@
         };
     };
 
-    // 磁気センサー用のリスナーを追加
     magnet_listener: magnet_listener {
         compatible = "zmk,input-listener";
         status = "okay";
@@ -83,15 +82,6 @@
         compatible = "infineon,tlx493d";
         reg = <0x5e>;
         status = "okay";
-        polling-interval-ms = <20>; // ポーリング間隔 (ミリ秒)
+        polling-interval-ms = <20>;
     };
 };
-
-// #include "MKB_L_base.dtsi"
-#ifdef MKB_L_MODULE_TB_ENABLED 
-#include "modules/MKB_L_TB.dtsi"
-#elif defined(MKB_L_MODULE_JOY_ENABLED)
-#include "modules/MKB_L_JS_Enc.dtsi"
-#elif defined(MKB_L_MODULE_ENC_ENABLED)
-#include "modules/MKB_L_Enc.dtsi"
-#endif
