Rename upload-firmware job to notify in build-nix.yml

--- a/.github/workflows/build-nix.yml
+++ b/.github/workflows/build-nix.yml
@@ -96,8 +96,7 @@ jobs:
           name: '${{ inputs.artifact_name }}'
           path: 'firmware/${{ steps.branch-name.outputs.branch }}/*'
 
-
-  upload-firmware:
+  notify:
     needs: build
     runs-on: ubuntu-latest
     steps:
