--- a/boards/shields/MKB/MKB_R.conf
+++ b/boards/shields/MKB/MKB_R.conf
@@ -15,6 +15,11 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
+CONFIG_PMW3610_SWAP_XY=n
+CONFIG_PMW3610_INVERT_X=n
+CONFIG_PMW3610_INVERT_Y=y
+CONFIG_PMW3610_SMART_ALGORITHM=y
+CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
