--- a/config/west.yml
+++ b/config/west.yml
@@ -8,8 +8,6 @@ manifest:
       url-base: https://github.com/badjeff
     - name: te9no
       url-base: https://github.com/te9no
-    - name: kumamuk-git
-      url-base: https://github.com/kumamuk-git
   projects:
     - name: zmk
       #remote: zmkfirmware
@@ -20,18 +18,12 @@ manifest:
       remote: caksoylar
       revision: main
     - name: zmk-pmw3610-driver
-      remote: kumamuk-git
+      remote: badjeff
       revision: main
     - name: zmk-analog-input-driver
       remote: badjeff
+      #remote: te9no
       revision: main
-    - name: zmk-dongle-display
-      remote: te9no
-      revision: main
-    - name: zmk-driver-tlx493d-2
-      remote: te9no
-      revision: main
-      
     # - name: zmk-leader-key
     #   remote: urob
     #   revision: v0.2.1 # set to same as ZMK version above
