--- a/config/west.yml
+++ b/config/west.yml
@@ -22,8 +22,14 @@ manifest:
       revision: main
     - name: zmk-analog-input-driver
       remote: badjeff
-      #remote: te9no
       revision: main
+    - name: zmk-dongle-display
+      remote: te9no
+      revision: main
+    - name: zmk-driver-tlx493d-2
+      remote: te9no
+      revision: main
+      
     # - name: zmk-leader-key
     #   remote: urob
     #   revision: v0.2.1 # set to same as ZMK version above
