Add input processor keybind configuration and update overlay for trackball support

--- a/boards/shields/MKB/MKB_L_TB.conf
+++ b/boards/shields/MKB/MKB_L_TB.conf
@@ -37,6 +37,7 @@ CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
 CONFIG_PMW3610_LOG_LEVEL_DBG=y
 
 CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
+CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND_CODES_MAX_LEN=4
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
