--- a/boards/shields/MKB/MKB.dtsi
+++ b/boards/shields/MKB/MKB.dtsi
@@ -1,7 +1,12 @@
 #include <dt-bindings/zmk/matrix_transform.h>
+#include <physical_layouts.dtsi>
 #include <behaviors/rgbled_widget.dtsi>
 
 / {
+	chosen {
+		zmk,physical-layout = &layout_MKB;
+	};
+   
 	default_transform: keymap_transform_0 {
 		compatible = "zmk,matrix-transform";
 		columns = <12>;
@@ -15,6 +20,81 @@
                  RC( 0, 5)  RC( 1, 5)  RC( 2, 5)  RC( 3, 5)  RC( 4, 5)     RC( 0,11)  RC( 1,11)  RC( 2,11)  RC( 3,11)  RC( 4,11)           
 		>;
 	};
+
+	layout_MKB: layout_MKB {
+		compatible = "zmk,physical-layout";
+		display-name = "MKB";
+		transform = <&default_transform>;
+		kscan = <&kscan0>;
+		
+        keys  //                     w   h    x    y     rot    rx    ry
+            = <&key_physical_attrs 100 100    0    0       0     0     0>
+            , <&key_physical_attrs 100 100  100    0       0     0     0>
+            , <&key_physical_attrs 100 100  200    0       0     0     0>
+            , <&key_physical_attrs 100 100  300    0       0     0     0>
+            , <&key_physical_attrs 100 100  400    0       0     0     0>
+            , <&key_physical_attrs 100 100  500    0       0     0     0>
+            , <&key_physical_attrs 100 100 1100    0       0     0     0>
+            , <&key_physical_attrs 100 100 1200    0       0     0     0>
+            , <&key_physical_attrs 100 100 1300    0       0     0     0>
+            , <&key_physical_attrs 100 100 1400    0       0     0     0>
+            , <&key_physical_attrs 100 100 1500    0       0     0     0>
+            , <&key_physical_attrs 100 100 1600    0       0     0     0>
+            , <&key_physical_attrs 100 100    0  100       0     0     0>
+            , <&key_physical_attrs 100 100  100  100       0     0     0>
+            , <&key_physical_attrs 100 100  200  100       0     0     0>
+            , <&key_physical_attrs 100 100  300  100       0     0     0>
+            , <&key_physical_attrs 100 100  400  100       0     0     0>
+            , <&key_physical_attrs 100 100  500  100       0     0     0>
+            , <&key_physical_attrs 100 100 1100  100       0     0     0>
+            , <&key_physical_attrs 100 100 1200  100       0     0     0>
+            , <&key_physical_attrs 100 100 1300  100       0     0     0>
+            , <&key_physical_attrs 100 100 1400  100       0     0     0>
+            , <&key_physical_attrs 100 100 1500  100       0     0     0>
+            , <&key_physical_attrs 100 100 1600  100       0     0     0>
+            , <&key_physical_attrs 100 100    0  200       0     0     0>
+            , <&key_physical_attrs 100 100  100  200       0     0     0>
+            , <&key_physical_attrs 100 100  200  200       0     0     0>
+            , <&key_physical_attrs 100 100  300  200       0     0     0>
+            , <&key_physical_attrs 100 100  400  200       0     0     0>
+            , <&key_physical_attrs 100 100  500  200       0     0     0>
+            , <&key_physical_attrs 100 100 1100  200       0     0     0>
+            , <&key_physical_attrs 100 100 1200  200       0     0     0>
+            , <&key_physical_attrs 100 100 1300  200       0     0     0>
+            , <&key_physical_attrs 100 100 1400  200       0     0     0>
+            , <&key_physical_attrs 100 100 1500  200       0     0     0>
+            , <&key_physical_attrs 100 100 1600  200       0     0     0>
+            , <&key_physical_attrs 100 100    0  300       0     0     0>
+            , <&key_physical_attrs 100 100  100  300       0     0     0>
+            , <&key_physical_attrs 100 100  200  300       0     0     0>
+            , <&key_physical_attrs 100 100  475  300       0     0     0>
+            , <&key_physical_attrs 100 100  575  325       0     0     0>
+            , <&key_physical_attrs 100 100 1025  325       0     0     0>
+            , <&key_physical_attrs 100 100 1125  300       0     0     0>
+            , <&key_physical_attrs 100 100 1400  300       0     0     0>
+            , <&key_physical_attrs 100 100 1500  300       0     0     0>
+            , <&key_physical_attrs 100 100 1600  300       0     0     0>
+            , <&key_physical_attrs  50  50  725  425       0     0     0>   //49
+            , <&key_physical_attrs  50  50  725  375       0     0     0>   //48
+            , <&key_physical_attrs  50  50  775  375       0     0     0>   //50
+            , <&key_physical_attrs  50  50  725  325       0     0     0>   //47
+            , <&key_physical_attrs  50  50  675  375       0     0     0>   //46
+            , <&key_physical_attrs  50  50  875  375       0     0     0>
+            , <&key_physical_attrs  50  50  925  325       0     0     0>
+            , <&key_physical_attrs  50  50  925  375       0     0     0>
+            , <&key_physical_attrs  50  50  925  425       0     0     0>
+            , <&key_physical_attrs  50  50  975  375       0     0     0>
+            ;
+	};
+		
+    position_map {
+        compatible = "zmk,physical-layout-position-map";
+
+        layout_MKB {
+            physical-layout = <&layout_MKB>;
+            positions = <>;
+        };
+    };
 
    aliases {
       led-red = &led0;
