--- a/config/west.yml
+++ b/config/west.yml
@@ -17,8 +17,11 @@ manifest:
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
-    - name: zmk-pmw3610-driver
-      remote: badjeff
+    - name: zmk-pmw3610-driver-kuma
+      remote: te9no
+      revision: main
+    - name: zmk-driver-tlx493d-2
+      remote: te9no
       revision: main
     - name: zmk-analog-input-driver
       remote: badjeff
@@ -29,7 +32,6 @@ manifest:
     - name: zmk-driver-tlx493d-2
       remote: te9no
       revision: main
-      
     # - name: zmk-leader-key
     #   remote: urob
     #   revision: v0.2.1 # set to same as ZMK version above
