--- a/config/west.yml
+++ b/config/west.yml
@@ -17,10 +17,10 @@ manifest:
     - name: zmk-rgbled-widget
       remote: caksoylar
       revision: main
-    - name: zmk-pmw3610-driver-kuma
-      remote: te9no
+    - name: zmk-pmw3610-driver
+      remote: badjeff
       revision: main
-    - name: zmk-driver-tlx493d-2
+    - name: zmk-pmw3610-driver-kuma
       remote: te9no
       revision: main
     - name: zmk-analog-input-driver
