--- a/boards/shields/MKB/MKB_L_TB.conf
+++ b/boards/shields/MKB/MKB_L_TB.conf
@@ -28,12 +28,12 @@ CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
 # PMW3610 optical sensor settings
-CONFIG_PMW3610=y
-CONFIG_PMW3610_SWAP_XY=n
-CONFIG_PMW3610_INVERT_X=n
-CONFIG_PMW3610_INVERT_Y=y
-CONFIG_PMW3610_SMART_ALGORITHM=y
-CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
+CONFIG_PMW3610_KUMA=y
+CONFIG_PMW3610_KUMA_SWAP_XY=n
+CONFIG_PMW3610_KUMA_INVERT_X=n
+CONFIG_PMW3610_KUMA_INVERT_Y=y
+CONFIG_PMW3610_KUMA_SMART_ALGORITHM=y
+CONFIG_PMW3610_KUMA_REPORT_INTERVAL_MIN=14
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
