--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -5,54 +5,6 @@
 #include "MKB_pinctrl_L.dtsi"
 #include "MKB.dtsi"
 
-/ {
-    chosen {
-        zephyr,display = &oled;
-    };
-
-    split_inputs {
-        #address-cells = <1>;
-        #size-cells = <0>;
-
-        trackball_split: trackball_split@0 {
-            compatible = "zmk,input-split";
-            reg = <0>;
-        };
-    };
-
-    trackball_listener: trackball_listener {
-        compatible = "zmk,input-listener";
-        status = "okay";
-        device = <&trackball_split>;
-        input-processors = <&zip_temp_layer 3 700>;
-
-        scroll {
-            layers = <1>;
-            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 16>, <&zip_xy_to_scroll_mapper>;
-        };
-    };
-
-    magnet_listener: magnet_listener {
-        compatible = "zmk,input-listener";
-        status = "okay";
-        device = <&magnet>;
-        input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 8>;
-    };
-
-    kscan0: kscan0 {
-        compatible = "zmk,kscan-gpio-charlieplex";
-        interrupt-gpios = <&xiao_d 6 (GPIO_ACTIVE_HIGH)>;
-        gpios
-            = <&xiao_d  0 (GPIO_ACTIVE_HIGH)>
-            , <&xiao_d  1 (GPIO_ACTIVE_HIGH)>
-            , <&xiao_d  2 (GPIO_ACTIVE_HIGH)>
-            , <&xiao_d  3 (GPIO_ACTIVE_HIGH)>
-            , <&gpio0   9 (GPIO_ACTIVE_HIGH)>
-            , <&gpio0  10 (GPIO_ACTIVE_HIGH)>
-            ;
-    };
-};
-
 &i2c1 {
     status = "okay";
     compatible = "nordic,nrf-twi";
@@ -82,5 +34,57 @@
         reg = <0x5e>;
         status = "okay";
         polling-interval-ms = <20>;
+        label = "TLX493D_SENSOR";
+    };
+};
+
+/ {
+    chosen {
+        zephyr,display = &oled;
+    };
+
+    split_inputs {
+        #address-cells = <1>;
+        #size-cells = <0>;
+
+        trackball_split: trackball_split@0 {
+            compatible = "zmk,input-split";
+            reg = <0>;
+        };
+    };
+
+    trackball_listener: trackball_listener {
+        compatible = "zmk,input-listener";
+        status = "okay";
+        device = <&trackball_split>;
+        input-processors = <&zip_temp_layer 3 700>;
+
+        scroll {
+            layers = <1>;
+            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 16>, <&zip_xy_to_scroll_mapper>;
+        };
+    };
+
+    tlx493d_listener: tlx493d_listener {
+        compatible = "zmk,input-listener";
+        status = "okay";
+        device = <&magnet>;
+        move {
+            layers = <0>;
+            input-processors = <&zip_xy_transform (INPUT_TRANSFORM_Y_INVERT)>, <&zip_xy_scaler 1 8>;
+        };
+    };
+
+    kscan0: kscan0 {
+        compatible = "zmk,kscan-gpio-charlieplex";
+        interrupt-gpios = <&xiao_d 6 (GPIO_ACTIVE_HIGH)>;
+        gpios
+            = <&xiao_d  0 (GPIO_ACTIVE_HIGH)>
+            , <&xiao_d  1 (GPIO_ACTIVE_HIGH)>
+            , <&xiao_d  2 (GPIO_ACTIVE_HIGH)>
+            , <&xiao_d  3 (GPIO_ACTIVE_HIGH)>
+            , <&gpio0   9 (GPIO_ACTIVE_HIGH)>
+            , <&gpio0  10 (GPIO_ACTIVE_HIGH)>
+            ;
     };
 };
