--- a/boards/shields/MKB/MKB_L_TB.conf
+++ b/boards/shields/MKB/MKB_L_TB.conf
@@ -36,9 +36,8 @@ CONFIG_PMW3610_SMART_ALGORITHM=y
 CONFIG_PMW3610_REPORT_INTERVAL_MIN=14
 CONFIG_PMW3610_LOG_LEVEL_DBG=y
 
+# Input processor configuration
 CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND=y
-CONFIG_ZMK_INPUT_PROCESSOR_KEYBIND_CODES_MAX_LEN=4
-
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
