Add MKB_L_RZT configuration and overlay files; remove TLX493D references from MKB_L_Base and MKB_L_TB

--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -27,12 +27,6 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
-# PMW3610 optical sensor settings
-CONFIG_PMW3610_KUMA=y
-CONFIG_PMW3610_KUMA_INVERT_X=n
-CONFIG_PMW3610_KUMA_INVERT_Y=y
-CONFIG_PMW3610_KUMA_SMART_ALGORITHM=y
-
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
@@ -41,6 +35,11 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
+
+# Enable TLX493D driver
+CONFIG_INPUT_TLX493D=y
+CONFIG_INPUT_TLX493D_POLLING_INTERVAL_MS=10
+CONFIG_INPUT_TLX493D_ROTATION_SCALER=12
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
