Add input processor keytoggle support to MKB_L_RZT configuration

--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -41,6 +41,9 @@ CONFIG_INPUT_TLX493D=y
 CONFIG_INPUT_TLX493D_POLLING_INTERVAL_MS=10
 CONFIG_INPUT_TLX493D_ROTATION_SCALER=13
 
+# Enable input processor for key toggling
+CONFIG_ZMK_INPUT_PROCESSOR_KEYTOGGLE=y
+
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
