--- a/config/west.yml
+++ b/config/west.yml
@@ -32,6 +32,9 @@ manifest:
     - name: zmk-driver-tlx493d-2
       remote: te9no
       revision: main
+    - name: zmk-input-processor-keytoggle
+      remote: te9no
+      revision: main
     # - name: zmk-leader-key
     #   remote: urob
     #   revision: v0.2.1 # set to same as ZMK version above
