ZMK_INPUT_PROCESSOR_KEYBIND

--- a/boards/shields/MKB/MKB_L_TB.conf
+++ b/boards/shields/MKB/MKB_L_TB.conf
@@ -27,11 +27,8 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DONGLE_DISPLAY_DONGLE_BATTERY=y
 
-# PMW3610 optical sensor settings
-CONFIG_PMW3610_KUMA=y
-CONFIG_PMW3610_KUMA_INVERT_X=n
-CONFIG_PMW3610_KUMA_INVERT_Y=y
-CONFIG_PMW3610_KUMA_SMART_ALGORITHM=y
+# Input processor configuration
+ZMK_INPUT_PROCESSOR_KEYBIND=y
 
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
