--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -69,4 +69,21 @@
             , <&gpio0  10 (GPIO_ACTIVE_HIGH)>
             ;
     };
+    
+	zip_keybind_keys: zip_keybind_keys {
+	        compatible = "zmk,input-processor-keybind";
+	        #input-processor-cells = <0>;
+		    track_remainders;
+	        bindings = <&kp RIGHT>,
+	                  <&kp LEFT>,
+	                  <&kp UP>,
+	                  <&kp DOWN>;
+	        tick = <40>;
+	        wait-ms = <0>;
+	        tap-ms = <10>;
+	        // mode = <0>
+	        // threshold = <10>
+	        // max_threshold = <200>
+	        // max_pending_activations = <10>
+    	};
 };
