--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -71,6 +71,11 @@
             ;
     };
     
+    trackball_listener2: trackball_listener2 {
+        compatible = "zmk,input-listener";
+        tatus = "okay";
+    };
+
 	zip_keybind_keys: zip_keybind_keys {
 	        compatible = "zmk,input-processor-keybind";
 	        #input-processor-cells = <0>;
