--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -73,7 +73,7 @@
     
     trackball_listener2: trackball_listener2 {
         compatible = "zmk,input-listener";
-        tatus = "okay";
+        status = "okay";
     };
 
 	zip_keybind_keys: zip_keybind_keys {
