--- a/boards/shields/MKB/MKB_pinctrl_L.dtsi
+++ b/boards/shields/MKB/MKB_pinctrl_L.dtsi
@@ -3,6 +3,7 @@
         group1 {
             psels = <NRF_PSEL(TWIM_SDA, 1, 14)>,
                     <NRF_PSEL(TWIM_SCL, 1, 15)>;
+            bias-pull-up;
         };
     };
       
@@ -11,6 +12,7 @@
             psels = <NRF_PSEL(TWIM_SDA, 1, 14)>,
                     <NRF_PSEL(TWIM_SCL, 1, 15)>;
             low-power-enable;
+            bias-pull-up;
         };
     };
 };
