CONFIG_ZMK_POINTING=n

--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -5,7 +5,7 @@ CONFIG_ZMK_KEYBOARD_NAME="MKB"
 CONFIG_ZMK_USB=y
 CONFIG_ZMK_BLE=y
 CONFIG_ZMK_MOUSE=y
-CONFIG_ZMK_POINTING=y
+CONFIG_ZMK_POINTING=n
 
 # Basic hardware configurations
 CONFIG_PINCTRL=y
