CONFIG_LAYOUT_SHIFT_TARGET_JIS=y

--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -61,3 +61,6 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 # Key debouncing settings (in milliseconds)
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
+
+# Enable Layout shift target for JIS keyboard
+CONFIG_LAYOUT_SHIFT_TARGET_JIS=y
