--- a/boards/shields/MKB/MKB_L_ENC.conf
+++ b/boards/shields/MKB/MKB_L_ENC.conf
@@ -57,3 +57,5 @@ CONFIG_ZMK_STUDIO_LOCKING=n
 CONFIG_ZMK_KSCAN_DEBOUNCE_PRESS_MS=5
 CONFIG_ZMK_KSCAN_DEBOUNCE_RELEASE_MS=7
 
+# Enable Layout shift target for JIS keyboard
+CONFIG_LAYOUT_SHIFT_TARGET_JIS=y
