--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -10,7 +10,7 @@
     pinctrl-0 = <&i2c1_default>;
     pinctrl-1 = <&i2c1_sleep>;
     pinctrl-names = "default", "sleep";
-    clock-frequency = <100000>; 
+    clock-frequency = <I2C_BITRATE_FAST>; 
     
     oled: ssd1306@3c {
         compatible = "solomon,ssd1306fb";
