--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -36,10 +36,8 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
-# Enable TLX493D driver
-CONFIG_INPUT_TLX493D=y
-CONFIG_INPUT_TLX493D_POLLING_INTERVAL_MS=500
-CONFIG_INPUT_TLX493D_ROTATION_SCALER=16
+# Enable HMC5883L driver
+CONFIG_HMC5883L=y
 
 # Enable input processor for key toggling
 CONFIG_ZMK_INPUT_PROCESSOR_KEYTOGGLE=y
