--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -37,7 +37,7 @@ CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
 # Enable HMC5883L driver
-CONFIG_HMC5883L=y
+CONFIG_INPUT_HMC5883L=y
 
 # Enable input processor for key toggling
 CONFIG_ZMK_INPUT_PROCESSOR_KEYTOGGLE=y
