CONFIG_INPUT_HMC5883L_DEBUG_BAR_GRAPH=y

--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -38,6 +38,7 @@ CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
 # Enable HMC5883L driver
 CONFIG_INPUT_HMC5883L=y
+CONFIG_INPUT_HMC5883L_DEBUG_BAR_GRAPH=y
 
 # Enable input processor for key toggling
 CONFIG_ZMK_INPUT_PROCESSOR_KEYTOGGLE=y
