--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -39,6 +39,7 @@ CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 # Enable HMC5883L driver
 CONFIG_INPUT_HMC5883L=y
 CONFIG_INPUT_HMC5883L_DEBUG_BAR_GRAPH=y
+CONFIG_INPUT_HMC5883L_POLLING_INTERVAL_MS=40
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
