--- a/boards/shields/MKB/MKB_R.conf
+++ b/boards/shields/MKB/MKB_R.conf
@@ -13,6 +13,10 @@ CONFIG_NFCT_PINS_AS_GPIOS=y
 CONFIG_ZMK_USB_LOGGING=y
 CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 
+# Display settings
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
+
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=n
