--- a/boards/shields/MKB/MKB_L_ENC.conf
+++ b/boards/shields/MKB/MKB_L_ENC.conf
@@ -23,6 +23,8 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 
 # Display settings
+CONFIG_ZMK_DISPLAY=y
+CONFIG_ZMK_WIDGET_WPM_STATUS=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
@@ -32,6 +34,7 @@ CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
 CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=n
 CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=n
+
 
 # Rotary encoder configuration
 CONFIG_EC11=y
