input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>,&zip_temp_layer 3 700>;

--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -48,7 +48,7 @@
         compatible = "zmk,input-listener";
         status = "okay";
         device = <&trackball_split>;
-        input-processors = <&zip_temp_layer 3 700>;
+        input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>,&zip_temp_layer 3 700>;
 
         scroll {
             layers = <1>;
