--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -26,7 +26,7 @@ CONFIG_ZMK_SPLIT_BLE_CENTRAL_PERIPHERALS=1
 # Display settings
 CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=y
-# CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # CONFIG_NICE_OLED_WIDGET_WPM=n
