--- a/boards/shields/MKB/MKB_R.conf
+++ b/boards/shields/MKB/MKB_R.conf
@@ -16,7 +16,7 @@ CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
 # Display settings
 CONFIG_ZMK_DISPLAY=y
 # CONFIG_ZMK_WIDGET_WPM_STATUS=y
-# CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
+CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
 # CONFIG_NICE_OLED_WIDGET_WPM=n
