--- a/boards/shields/MKB/MKB_L_Base.dtsi
+++ b/boards/shields/MKB/MKB_L_Base.dtsi
@@ -54,6 +54,17 @@
             layers = <1>;
             input-processors = <&zip_xy_transform (INPUT_TRANSFORM_X_INVERT)>, <&zip_xy_scaler 1 16>, <&zip_xy_to_scroll_mapper>;
         };
+
+        arrow {
+            layers = <2>;
+            input-processors = <&zip_keybind_keys>;
+            process-next;
+        };
+        
+        arrow-prevent-move {
+            layers = <2>;
+            input-processors = <&zip_xy_scaler 0 1>;
+        };
     };
 
     kscan0: kscan0 {
