--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -35,6 +35,10 @@ CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
 
+# Enable PINNACLE driver
+CONFIG_INPUT_PINNACLE=y
+CONFIG_ZMK_INPUT_PINNACLE_IDLE_SLEEPER=y
+
 # Enable MLX90393 driver
 CONFIG_ZMK_INPUT_MLX90393=y
 
