--- a/boards/shields/MKB/MKB_R_TB.conf
+++ b/boards/shields/MKB/MKB_R_TB.conf
@@ -23,6 +23,10 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
+# Rotary encoder configuration
+CONFIG_EC11=y
+CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
+
 # PMW3610 optical sensor settings
 CONFIG_PMW3610=y
 CONFIG_PMW3610_SWAP_XY=n
@@ -42,6 +46,10 @@ CONFIG_RGBLED_WIDGET_BATTERY_LEVEL_CRITICAL=10
 CONFIG_RGBLED_WIDGET_SHOW_LAYER_CHANGE=y
 CONFIG_RGBLED_WIDGET_LAYER_COLOR=7
 CONFIG_RGBLED_WIDGET_BATTERY_SHOW_PERIPHERALS=y
+
+# Enable PINNACLE driver
+CONFIG_INPUT_PINNACLE=y
+CONFIG_ZMK_INPUT_PINNACLE_IDLE_SLEEPER=y
 
 # Battery reporting configuration
 CONFIG_ZMK_BATTERY_REPORTING=y
