--- a/boards/shields/MKB/MKB.dtsi
+++ b/boards/shields/MKB/MKB.dtsi
@@ -10,7 +10,7 @@
 	default_transform: keymap_transform_0 {
 		compatible = "zmk,matrix-transform";
 		columns = <12>;
-		rows = <5>;
+		rows = <6>;
 		
 		map = <
 		RC( 1, 0)  RC( 2, 0)  RC( 3, 0)  RC( 4, 0)  RC( 5, 0)  RC( 2, 1)     RC( 1, 6)  RC( 2, 6)  RC( 3, 6)  RC( 4, 6)  RC( 5, 6)  RC( 2, 7)
@@ -18,6 +18,8 @@
 		RC( 0, 3)  RC( 1, 3)  RC( 2, 3)  RC( 4, 3)  RC( 5, 3)  RC( 4, 1)     RC( 0, 9)  RC( 1, 9)  RC( 2, 9)  RC( 4, 9)  RC( 5, 9)  RC( 4, 7)
 		RC( 0, 4)  RC( 1, 4)  RC( 2, 4)             RC( 3, 4)  RC( 5, 4)     RC( 0,10)  RC( 1,10)             RC( 2,10)  RC( 3,10)  RC( 5,10)
                  RC( 3, 5)  RC( 2, 5)  RC( 4, 5)  RC( 1, 5)  RC( 0, 5)     RC( 2,11)  RC( 0,11)  RC( 4,11)  RC( 3,11)  RC( 1,11)
+      RC(6,0)    RC(6,1)    RC(8,2)    RC(6,3)
+
 		>;
 	};
 
@@ -127,8 +129,13 @@
       status = "disabled";
    };
 
+   right_encoder2: right_encoder2 {
+      compatible = "alps,ec11";
+      status = "disabled";
+   };
+
    sensors: sensors {
       compatible = "zmk,keymap-sensors";
-      sensors = <&left_encoder &right_encoder>;
+      sensors = <&left_encoder &right_encoder &right_encoder2>;
    };
 };
