--- a/boards/shields/MKB/MKB_L_RZT.conf
+++ b/boards/shields/MKB/MKB_L_RZT.conf
@@ -43,6 +43,16 @@ CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
 
+# Thread stack size configurations
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+
+# Bluetooth PHY settings
+CONFIG_BT_CTLR_PHY_2M=n
+
 # Bluetooth connection interval settings (in units of 1.25ms)
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
