--- a/boards/shields/MKB/MKB_L_TPD.conf
+++ b/boards/shields/MKB/MKB_L_TPD.conf
@@ -26,13 +26,6 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_WORK_QUEUE_DEDICATED=y
 # CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 
-# CONFIG_NICE_OLED_WIDGET_WPM=n
-# CONFIG_NICE_OLED_WIDGET_WPM_LUNA=n
-# CONFIG_NICE_OLED_WIDGET_HID_INDICATORS=n
-# CONFIG_NICE_OLED_WIDGET_HID_INDICATORS_LUNA=n
-# CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS=n
-# CONFIG_NICE_OLED_WIDGET_MODIFIERS_INDICATORS_LUNA=n
-
 # RGB LED widget configuration
 CONFIG_RGBLED_WIDGET=y
 CONFIG_RGBLED_WIDGET_INTERVAL_MS=250
@@ -50,6 +43,16 @@ CONFIG_ZMK_INPUT_PINNACLE_IDLE_SLEEPER=y
 CONFIG_ZMK_BATTERY_REPORTING=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_PROXY=y
 CONFIG_ZMK_SPLIT_BLE_CENTRAL_BATTERY_LEVEL_FETCHING=y
+
+# Thread stack size configurations
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+
+# Bluetooth PHY settings
+CONFIG_BT_CTLR_PHY_2M=n
 
 # Bluetooth connection interval settings (in units of 1.25ms)
 CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
