--- a/boards/shields/MKB/MKB_R_JOY.conf
+++ b/boards/shields/MKB/MKB_R_JOY.conf
@@ -58,6 +58,16 @@ CONFIG_BT_PERIPHERAL_PREF_MIN_INT=12
 CONFIG_BT_PERIPHERAL_PREF_MAX_INT=12
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
 
+# Thread stack size configurations
+CONFIG_ZMK_BLE_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_LOW_PRIORITY_THREAD_STACK_SIZE=2048
+CONFIG_INPUT_THREAD_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_PERIPHERAL_STACK_SIZE=2048
+CONFIG_ZMK_SPLIT_BLE_CENTRAL_SPLIT_RUN_STACK_SIZE=3096
+
+# Bluetooth PHY settings
+CONFIG_BT_CTLR_PHY_2M=n
+
 # ZMK Studio configuration
 CONFIG_ZMK_STUDIO=y
 CONFIG_ZMK_STUDIO_LOCKING=n 
