--- a/boards/shields/MKB/MKB_R_Base.dtsi
+++ b/boards/shields/MKB/MKB_R_Base.dtsi
@@ -39,6 +39,10 @@
     };
     
     kscan2: kscan2 {
+        compatible = "zmk,kscan-mock";
+        columns = <0>;
+        rows = <0>;
+        events = <0>;
     };
 };
 
